<resources>
  <string name="app_name">Test1</string>
  <string name="title">耄 耋 T V</string>
  <string name="sub_title">♿️哈基米 叮咚鸡 胖宝宝 踩踩背 搞核酸 袋鼠鸡 一段带一段♿️栗老师 小豌豆 蹲方魂 原上咪 龙扛狼 好好汉 盖伦发发♿️在美国叫超人 在中国叫电棍 老爷爷动起来 我来给你踩踩背♿️哈哈哈哈基米 叫叫来搞搞核酸 叮♿️你看你爹操作这波♿️OK前十是谁呢♿️圆！头耄耋和老财♿️胖宝宝 U好可爱UAUV小白手套～♿️韭↘菜盒子吃两个♿️缺 的 营 养 谁给我补啊♿️（别吃别吃）♿️超泥麻的（吃那么多）♿️（啦啦啦）哥我错啦～♿️（开大呀）♿️这  就是你龙哥 呀♿️龙龙又哥哥♿️（窝卡）超似泥的嘛～（超少女动漫）♿️我是龙！♿️奶龙 是～什么呀～～♿️卧慒！拉  斯（特）炫♿️不行！不行！！！♿️米米浴浴 说的道理 奥利 费费安♿️上不去 下↘不来♿️卡 这里♿️好汉 欧内欧内手 好好汉♿️(窝依～窝依～ 超柠檬）♿️今天 谁 跑 谁 儿子的♿️A欧西给 阿 米 诺～斯♿️♿️奥利安 大旋风！！♿️♿️</string>
  <string name="play01">名字</string>
  <string name="play02">爱猫账号</string>
  <string name="play03">爱猫密码</string>
  <string name="play04">哈气码</string>
  <string name="play00">登录并哈气</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
  </string>
</resources>