<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="70dp"
    android:text="@string/title"
    android:textSize="50sp" />

  <TextView
    android:id="@+id/textView"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/sub_title"
    android:layout_margin="15dp"
    android:singleLine="true"
    android:ellipsize="marquee"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:marqueeRepeatLimit="marquee_forever"
    android:scrollHorizontally="true"
    android:textSize="18sp"/>

  <androidx.cardview.widget.CardView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="100dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/white">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@mipmap/img"
      android:scaleType="centerCrop"/>

  </androidx.cardview.widget.CardView>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play01"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:inputType="text"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play02"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:inputType="textPassword"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play03"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play04"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:maxLength="6"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/play00"
    android:layout_marginTop="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp" />

</LinearLayout>