<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/tittle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="50sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.15"/>

  <TextView
    android:id="@+id/marquee"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/sub_title"
    android:singleLine="true"
    android:ellipsize="marquee"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:marqueeRepeatLimit="marquee_forever"
    android:scrollHorizontally="true"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tittle"
    app:layout_constraintVertical_bias="0.12"/>

  <LinearLayout
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/marquee"
    app:layout_constraintVertical_bias="0.20">


  <androidx.cardview.widget.CardView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="100dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/white">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@mipmap/img"
      android:scaleType="centerCrop"/>

  </androidx.cardview.widget.CardView>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play01"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:inputType="text"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play02"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:inputType="text"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/pwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play03"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:inputType="textPassword"
    android:textSize="20sp"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/play04"
    android:layout_marginTop="20dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:maxLength="6"
    android:inputType="number"
    android:textSize="20sp"/>


</LinearLayout>


  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/play00"
    android:layout_marginTop="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:textSize="20sp"
    android:onClick="logIn"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/content"
    app:layout_constraintVertical_bias="0.85"/>

</androidx.constraintlayout.widget.ConstraintLayout>